2007-04-19  Konstantin Triger <kostat@mainsoft.com>

	* XmlSchemaExporter.cs: do not export twice simple types.

2007-04-10  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeData.cs : forgot NET_2_0.

2007-04-10  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeData.cs : in get_ListItemTypeData(), check generic ICollection
	  as well as non-generic one. Fixed bug #81341. Though the type check
	  looks like an aggregation of bugfix hacks and there should be some
	  kind of sane refactoring, to throw best-suited errors.

2007-02-28  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationCodeGenerator.cs : fix wrong name comparison:
	  Name->LocalName. Add hacky TARGET_JVM support (hope it is harmless).

2007-02-20  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationCodeGenerator.cs,
	  XmlSerializationReaderInterpreter.cs :
	  Handle attributes on non-empty elements as well. Fixed bug #80131.

2007-02-20  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationCodeGenerator.cs,
	  XmlSerializationReaderInterpreter.cs :
	  Handle empty root element.
	  Read out attribute parameters. To do that, split attribute
	  reader part from ReadMembers(), as it isn't invoked when the
	  element is empty.

2007-02-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlTypeMapElementInfo.cs : set nullable if the type is Nullable<T>.

2007-02-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlReflectionImporter.cs : CanBeNull() should return true when the
	  argument is generic nullable value type.

2007-02-19  Atsushi Enomoto  <atsushi@ximian.com>

	* TypeData.cs, MapCodeGenerator.cs, XmlMemberMapping.cs,
	  TypeTranslator.cs : removed IsGenericNullable and added
	  set_IsNullable so that it could be simpler.

2007-02-19  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationCodeGenerator.cs, XmlMappingAccess.cs,
	  SerializationCodeGeneratorConfiguration.cs : replaced HookDir with
	  XmlMappingAccess.

2007-02-19  Atsushi Enomoto  <atsushi@ximian.com>
