@@ -1,3 +1,8 @@
+2007-04-20  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* XmlSerializerTests.cs :
+	  Added test for serializing private-constructor-only class.
+
 2007-02-20  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* XmlSerializationReaderTests.cs : test non-empty element as well.
