@@ -1,3 +1,9 @@
+2007-04-20  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* XmlTypeMapping.cs, ReflectionHelper.cs,
+	  XmlSerializationReaderInterpreter.cs, SerializationCodeGenerator.cs:
+	  support instantiation by private constructor.
+
 2007-04-19  Konstantin Triger <kostat@mainsoft.com>
 
 	* XmlSchemaExporter.cs: do not export twice simple types.
